--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@octokit/rest": "^18.0.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1"
   }
 }
