--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   "private": true,
   "dependencies": {
     "@octokit/rest": "^18.0.1",
+    "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "path2": "^0.1.0",
+    "shelljs": "^0.8.4",
+    "tmp-promise": "^3.0.2"
   }
 }
